wordpress/nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: wordpress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: wp.singorojo.my.id
    http:
      paths:
      - backend:
          service:
            name: wordpress-1643702870
            port:
              number: 80
        path: /
        pathType: Prefix
